<resources>
    <string name="app_name">StuMana</string>
    <string name="tvQLSV_text">QUẢN LÝ SINH VIÊN</string>
    <string name="txtDangNhap_text">ĐĂNG NHẬP</string>
    <string name="edtTenDN_hint">Tên đăng nhập</string>
    <string name="edtMatKhau_hint">Mật khẩu</string>
    <string name="tvQuenMatKhau_text">Quên mật khẩu?</string>
    <string name="btnDangNhap_text">ĐĂNG NHẬP</string>
    <string name="btnQuayLai_text">QUAY LẠI</string>
    <string name="btnGuiMail_text">GỬI</string>
    <string name="navigation_open">Open navigation</string>
    <string name="navigation_close">Close navigation</string>
    <string name="tv_title_hp_text">HỌC PHẦN</string>
    <string name="tv_khoa_for_spn_text">Khoa: </string>
    <string name="it_title_search">Search</string>
    <string name="imv_hp_contDes">Image HP</string>
    <string name="tv_tenhp_text">Tên học phần</string>
    <string name="tv_mahp_text">Mã học phần: </string>
    <string name="imb_contDes_btnXoa">Btn Xóa</string>
    <string name="imb_contDes_btnEdit">Btn Edit</string>
    <string name="tv_title_themhp_text">THÊM HỌC PHẦN</string>
    <string name="tv_mahp_title_text">Mã học phần</string>
    <array name="filter_credit_class">
        <item name="item1">Lớp</item>
        <item name="item2">Môn</item>
    </array>
    <array name="view_mode">
        <item name="item1">Lớp TC</item>
        <item name="item2">Sinh viên</item>
    </array>
</resources>